2017-08-25         Pat Rankin            <r.pat.rankin@gmail.com>

	* builtin.c (TYPE_MINIMUM): Use type uintmax_t for the calculation,
	deferring the cast to the target type until the final result.

2017-08-27         Juan Manuel Guerrero  <juan.guerrero@gmx.de>

	* mbsupport.h [__DJGPP_]: Provide multi-byte specific declarations
	and definitions for DJGPP.

2017-08-23         Arnold D. Robbins     <arnold@skeeve.com>

	* README.git: Minor edits to make build steps clearer.

2017-08-21         Daniel Richard G.     <skunk@iSKUNK.ORG>

	* awk.h (c_func): Renamed to c_function to avoid conflict.
	with z/OS headers.
	* ext.c, interpret.h: Ditto.
	* configure: Regenerated after update to m4/arch.m4.

2017-08-18         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (do_set_var): Fix typos in error messages.
	Thanks to Jean-Philippe Guerard
	<jean-philippe.guerard@xn--tigreray-i1a.org> for the report.

2017-08-17         Arnold D. Robbins     <arnold@skeeve.com>

	* field.c (rebuild_record): Set new fields valref to 1 if
	original field's valref was > 1. Update the comment. Found
	by running chem.
	* mpfr.c (do_mpfr_compl): Fix typo in warning message.
	Thanks to Jean-Philippe Guerard
	<jean-philippe.guerard@xn--tigreray-i1a.org> for the report.
	* NEWS: Mention the Italian translation of the manual.

2017-08-16         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.c (assign_number): Clean up the code a bit.
	(api_get_mpfr, api_get_mpz): Add return NULL in non-MPFR case
	to avoid compiler warnings.

2017-08-16         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess: Update from GNULIB.
	* NEWS, README: Updated in preparation for release.

2017-08-16         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkapi.c (assign_number): Add 'ifdef HAVE_MPFR' tests to get this
	to build in the absence of MPFR.

2017-08-13         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h (gawk_api_major_version): Reset to 2 after merging