@@ -1,3 +1,8 @@
+2017-08-28         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* interpret.h (r_interpret): Add some casts to avoid warning
+	messages in printf statements.
+
 2017-08-25         Pat Rankin            <r.pat.rankin@gmail.com>
 
 	* builtin.c (TYPE_MINIMUM): Use type uintmax_t for the calculation,
